Time: 5 ms (55.38%) | Memory: 45.7 MB (85.40%) - LeetSync